# pywordle

./: README.md  README.rst  requirements.txt  setup.cfg
src/: wordle_class.py  wordle_class.spec  wordle_cloud.py  wordle_solutions.txt  wordle_utils.py
src/wordlepy/: wordle_class.py  wordle_cloud.py  wordle_solutions.txt  wordlebot_solutions.txt
src/wordlepy.egg-info/: PKG-INFO
tests/: wordle_class_tests.py
