[metadata]
name = wordlepy
version = version number: 0.0.0
license = GNU
description = python wordle utilities
long_description = file: README.rst
author = Ben Hook
author_email = benahook@gmail.com
classifiers=
    Development Status :: 0 - Beta
    Environment :: Console
    Intended Audience :: Everyone
    License :: GNU License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Wordgames

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pandas
    matplotlib
    wordcloud
    openpyxl
    

[options.packages.find]
where=src